--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -57,6 +57,8 @@ body {
   text-align: center;
   overflow: hidden;
   transition: background-image 0.3s ease;
+  background-position: left;
+  background-repeat: no-repeat;
 }
 
 .table-cell.highlighted {
@@ -77,6 +79,7 @@ body {
   font-weight: bold;
   text-align: center;
   position: relative;
+  background-image: none !important;
 }
 
 .remove-btn {
@@ -147,6 +150,15 @@ body {
   box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
 }
 
-.table-cell.highlighted {
-  background-color: #e0f7fa; /* A subtle light blue background */
+.table-cell.percentage-row {
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 165, 0, 0.5) var(--heatmap-percentage),
+    transparent var(--heatmap-percentage)
+  );
+}
+
+.table-cell.percentage-row:not(.sum-cell) {
+  color: transparent;
+  text-shadow: 0 0 0 #333;
 }
